--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,14 +24,14 @@ jobs:
         run: |-
           wget -q https://github.com/upx/upx/releases/download/v3.96/upx-3.96-amd64_linux.tar.xz
           tar -xf upx-3.96-amd64_linux.tar.xz
-          install upx-3.96-amd64_linux/upx /usr/bin/upx
+          sudo install upx-3.96-amd64_linux/upx /usr/bin/upx
           rm -rf upx*
 
       - name: Install goreleaser
         run: |-
           wget -q https://github.com/goreleaser/goreleaser/releases/download/v0.123.3/goreleaser_Linux_x86_64.tar.gz
           tar -xf goreleaser_Linux_x86_64.tar.gz
-          install goreleaser /usr/bin/goreleaser
+          sudo install goreleaser /usr/bin/goreleaser
           rm -rf goreleaser*
 
       - name: Build and publish release binaries
