--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,6 +13,10 @@ builds:
       - amd64
       - 386
 
+    ignore:
+      - goos: darwin
+        goarch: 386
+
     ldflags:
       - -s -w
       - -X main.version={{.Version}}
@@ -21,8 +25,8 @@ builds:
       - CGO_ENABLED=0
 
     hooks:
-      pre: go mod tidy
-      post: make compress
+      post:
+        - upx --best --ultra-brute "{{ .Path }}"
 
 archives:
   - id: qlock
