--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,17 +22,19 @@ jobs:
 
       - name: Install upx
         run: |-
+          cd "$(mktemp -d)"
           wget -q https://github.com/upx/upx/releases/download/v3.96/upx-3.96-amd64_linux.tar.xz
           tar -xf upx-3.96-amd64_linux.tar.xz
           sudo install upx-3.96-amd64_linux/upx /usr/bin/upx
-          rm -rf upx*
+          rm -rf "$PWD"
 
       - name: Install goreleaser
         run: |-
+          cd "$(mktemp -d)"
           wget -q https://github.com/goreleaser/goreleaser/releases/download/v0.145.0/goreleaser_Linux_x86_64.tar.gz
           tar -xf goreleaser_Linux_x86_64.tar.gz
           sudo install goreleaser /usr/bin/goreleaser
-          rm -rf goreleaser*
+          rm -rf "$PWD"
 
       - name: Build and publish release binaries
         env:
